[tool.poetry]
name = "gapstatistics"
version = "0.1.1"
description = "A library for calculating the gap statistics for clustering algorithms"
authors = ["Tim Loehr <timloehr@icloud.com>"]
license = "MIT"

dependencies = [
    "numpy",
    "scikit-learn",
    "matplotlib",
    "scipy"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"