[tool.poetry]
name = "gapstatistics"
version = "0.1.4"
description = "A library for calculating the gap statistics for clustering algorithms"
authors = ["Tim Loehr <timloehr@icloud.com>"]
license = "MIT"
repository = 'https://github.com/Mavengence/GapStatistics'
readme = 'README.md'

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scikit-learn",
    "matplotlib",
    "scipy"
]